hphp/hack/test/typecheck/readonly/params.php.exp
File "params.php", line 12, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
File "params.php", line 19, characters 5-6:
This value is readonly, its properties cannot be modified (Typing[4409])
